[package]
name = "transmission_api_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
transmission-rpc = "0.4.2"
tokio = { version = "1.33.0", features = ["full"] }
ntfy = { version = "0.4.0" }
log = {version = "0.4.21"}
serde = {version = "1.0.197", feature = ["derive"]}
serde_cbor = {version = "0.11.2"}
env_logger = {version = "0.11.3"}
